src/App.less
/* START DEFAULTS */
:root {
    font-family:
        system-ui,
        -apple-system,
        BlinkMacSystemFont,
        'Segoe UI',
        Roboto,
        Oxygen,
        Ubuntu,
        Cantarell,
        'Open Sans',
        'Helvetica Neue',
        sans-serif;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;

    --inner: 3vw;
    --vertical: 6rem;
    --horizontal: 15vw;
    --dark: black;
    --light: #eeeeee;

    --large: 2rem;
    --medium: 1.8rem;
    --small: 1.2rem;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body,
#root,
.app {
    .flex-col;
    flex: 1 1;
    min-height: 100%;
    min-width: 100%;
    background: black;
}

a[href] {
    text-decoration: none;
    color: inherit;
}

/* END DEFAULTS */

.flex {
    display: flex;
}

.flex-col {
    .flex;
    flex-direction: column;
}

.flex-fill {
    flex: 1 1 auto;
}

.bold {
    font-weight: 700;
}

.no-decor {
    font-weight: 400;
}

.gray {
    color: #666;
}

.img-wrapper {
    .flex;
    flex-direction: column;
    position: relative;
    overflow: hidden;
    height: fit-content;
    transition: transform 0.3s ease;
    overflow: hidden;

    img {
        object-fit: cover;
        object-position: top;
        width: 100%;
        height: 100%;
    }
}

h2 {
    font-size: var(--large);
}

.about,
.projects,
.education {
    .flex-col;
    padding: var(--vertical) var(--horizontal);
}

.about > *,
.projects h2,
.projects .description,
.education h2,
.education > * {
    margin-left: var(--inner);
    margin-right: var(--inner);
}

.about {
    color: var(--light);
    gap: 3em;

    .logo {
        width: 6rem;
        outline: 1px solid white;
    }

    .summary {
        .flex-col;
        .flex-fill;
        gap: 1em;
        line-height: 1.5em;

        h2 {
            font-size: var(--large);
        }
    }

    .info {
        > * {
            .flex;
            align-items: center;
            font-size: var(--small);
            margin-bottom: 1rem;

            &:hover .img-wrapper {
                transform: scale(1.1);
            }
        }

        span {
            margin-left: 1.4rem;
        }

        .img-wrapper {
            width: 3rem;
            filter: saturate(0) invert(1) brightness(2);
        }
    }
}

.projects,
.education {
    background: var(--light);

    > *:not(:last-child) {
        margin-bottom: var(--vertical);
    }

    .description,
    > article {
        .flex-col;
        font-size: var(--small);
        line-height: 160%;
    }
}

.projects {
    .project {
        h3 {
            .flex;
            position: relative;
            align-items: center;

            > a {
                .visit-icon {
                    font-size: 0.6em;
                    align-self: center;
                    margin-left: 0.2em;
                }
                &:hover {
                    text-decoration: underline;
                }
            }
        }

        > .img-wrapper {
            height: 25em;
            max-height: 50vh;
            justify-content: center;
            margin-bottom: 1.5rem;
            transition: transform 0.3s ease;

            &:hover {
                transform: scale(1.02);
            }
        }

        .description .git {
            position: absolute;
            right: 0;
            width: 2rem;
            align-self: center;
            transition: transform 0.3s ease;

            &:hover {
                transform: scale(1.1);
            }
        }
    }

    .secondary-projects {
        .flex;

        > .project {
            flex-basis: 50%;

            > .img-wrapper {
                height: 10em;
                background: white;

                &::hover {
                    transform: scale(1.02);
                }
            }

            &:not(:last-child) {
                margin-right: 1rem;
            }
        }
    }

    .stack-container {
        .flex;
        flex-wrap: wrap;
        column-gap: 1em;
        font-size: 0.8em;

        &.compact {
            .flex-col;
        }
    }

    .repo {
        .flex;
        align-items: center;
        margin-left: var(--inner);
        font-size: var(--small);

        .img-wrapper {
            margin-right: 1rem;
            width: 2rem;
            transition: transform 0.3s ease;
        }

        &:hover .img-wrapper {
            transform: scale(1.1);
        }
    }
}

.education > article {
    .flex-col;
}

@media only screen and (max-width: 900px) {
    :root {
        --horizontal: 1rem;
        --inner: 0vw;
        --vertical: 4rem;
        --dark: black;
        --light: #eeeeee;

        --large: 1.5rem;
        --medium: 1.2rem;
        --small: 1rem;
    }

    .about {
        padding: 2em;
        gap: 5em;

        .info {
            .flex;
            width: 100%;
            justify-content: space-between;

            > * {
                .flex;
                align-items: center;
                font-size: var(--small);
                margin-bottom: 1rem;
            }

            span {
                display: none;
            }
        }
    }

    .projects {
        .project {
            > .img-wrapper {
                max-height: 30vh;
            }

            .description .git {
                width: 1.5rem;
            }
        }
    }
}

